# ai-learning-assistant

./: .gitattributes  .gitignore  CLAUDE.md  PROJECT_SKELETON.md  README.md  findings.md  package-lock.json  package.json  progress.md  render.yaml  task_plan.md
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/agents/: document_agent.py  graph.py  memory_agent.py  quiz_agent.py  review_agent.py  state.py  tutor_agent.py
apps/api/app/api/: deps.py  routes_auth.py  routes_chat.py  routes_documents.py  routes_profile.py  routes_quiz.py  routes_search.py  routes_summary.py  routes_tts.py
apps/api/app/core/: config.py  errors.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  chunk.py  document.py  learning_memory.py  quiz.py  user.py
apps/api/app/schemas/: auth.py  chat.py  document.py  plan.py  profile.py  quiz.py  report.py  summary.py
apps/api/app/services/: auth_service.py  chunker.py  document_parser.py  document_store.py  embeddings.py  error_notebook.py  knowledge_graph.py  llm.py  mastery_service.py  planning_service.py  quiz_generator.py  report_service.py  retrieval.py  summary_generator.py  (+2 more)
apps/api/tests/: conftest.py  test_auth.py  test_chat.py  test_chunker.py  test_error_notebook.py  test_graph.py  test_knowledge_graph.py  test_library.py  test_mastery.py  test_parser.py  test_phase5.py  test_plan.py  test_quiz.py  test_review.py  test_socratic.py  test_summary.py  test_tool_calling.py  test_upload.py  test_url_import.py  test_vector_store.py  test_weekly_report.py
(+39 files in other folders)
