[project]
name = "agentlearn-api"
version = "0.1.0"
description = "FastAPI backend for an AI learning assistant agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "qdrant-client>=1.11.0",
  "langgraph>=0.2.0",
  "pymupdf>=1.24.0",
  "openai>=1.40.0",
  "rank-bm25>=0.2.2",
  "trafilatura>=1.12.0",
  "yt-dlp>=2024.1.1",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "email-validator>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]
ocr = [
  "pytesseract>=0.3.10",
  "Pillow>=10.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

